--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-http = "3.10.0"
 regex = "1.11.1"
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-env_logger = "0.4"
+env_logger = "0.9"
+log = "0.4"
 dontenv = "0.15"
 tokio = {version = "1", features = ["full"] }
