--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "population-growth-rate-api"
+name = "pgr"
 version = "0.1.0"
 edition = "2024"
 
@@ -11,5 +11,5 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 env_logger = "0.9"
 log = "0.4"
-dontenv = "0.15"
+dotenv = "0.15"
 tokio = {version = "1", features = ["full"] }
